update readme and 4

--- a/ipynb/04-data_conditioning.ipynb
+++ b/ipynb/04-data_conditioning.ipynb
@@ -451,6 +451,15 @@
     "\n",
     "housing_features_log_df = log(housing_features)\n",
     "\n",
+    "# inverse hyperbolic sine\n",
+    "# hs <- function(x) {\n",
+    "#     y <- 0.5*exp(-x)*(exp(2*x)-1)\n",
+    "#     return(y)\n",
+    "# }\n",
+    "\n",
+    "# housing_features_log_df = hs(housing_features)\n",
+    "\n",
+    "\n",
     "skewness_['skew_log_'] = sapply(housing_features_log_df, skewness)\n",
     "skewness_"
    ]
@@ -640,7 +649,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Taking the log of the data can have the effect of pulling in the outliers closer to the mean. This in turn will reduce the 3rd moment of probability, also known as the skewness. In this dataset, 7 of the features have reduced skewness after taking the log. This is depicted in the plots by the closeness of the mean and median when compared to the distribution plots of the original data. Also, the area of bar plots on each side of the median starts to look more evenly distributed. The other features ended up having more skewness and ZN was computed as NaN because it reduces to infinity during the calculation."
+    "Taking the log of the data can have the effect of pulling in the outliers closer to the mean. This in turn will reduce the 3rd moment of probability, also known as the skewness. In this dataset, 7 of the features have reduced skewness after taking the log. This is depicted in the plots by the closeness of the mean and median when compared to the distribution plots of the original data. Also, the area of bar plots on each side of the median starts to look more evenly distributed. The other features ended up having more skewness and ZN was computed as NaN because it reduces to infinity during the calculation. "
    ]
   },
   {
