--- a/ipynb/05-outlier_analysis.ipynb
+++ b/ipynb/05-outlier_analysis.ipynb
@@ -2,6 +2,87 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "library(dplyr, warn.conflicts = FALSE)\n",
+    "library(moments)\n",
+    "library(ggplot2)\n",
+    "library(repr)\n",
+    "source('multiplot.r')\n",
+    "options(repr.plot.width=10, repr.plot.height=2) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "housing_data <- data.frame(read.table(file='../data/housing.data', header=FALSE, sep=\"\"))\n",
+    "colnames(housing_data) <- c('CRIM','ZN','INDUS','CHAS','NOX','RM','AGE','DIS','RAD','TAX','PTRATIO','B','LSTAT','MEDV')\n",
+    "housing_data$MEDV <- NULL\n",
+    "housing_data$CHAS = factor(housing_data$CHAS)\n",
+    "housing_features = Filter(is.numeric, housing_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ERROR",
+     "evalue": "Error in eval(expr, envir, enclos): could not find function \"housing_data.describe\"\n",
+     "output_type": "error",
+     "traceback": [
+      "Error in eval(expr, envir, enclos): could not find function \"housing_data.describe\"\nTraceback:\n"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Outlier Analysis (Extra Credit)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Use Tukey's method to identify outliers for each feature"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Identify each instance that is an outlier for more than one feature"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Assess what percentage of the total data are outliers for:\n",
+    "    - one feature\n",
+    "    - two features\n",
+    "    - other"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Come up with a plan for handling outliers"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
